<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_360sdp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:expanded="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="center"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bank_details_cover"
                    app:layout_collapseMode="parallax" />

                <View
                    android:id="@+id/image_gradient_layer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bank_details_gradient_bg"
                    app:layout_collapseMode="parallax" />


                <RelativeLayout
                    android:id="@+id/info_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/rounded_bg_4_sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/bankTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="?attr/textColorGray"
                        android:textSize="@dimen/_14sdp"
                        tools:text="VTB Bank" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/branchNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bankTitleTextView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:textColor="?attr/textColorGray"
                        android:textSize="@dimen/_12sdp"
                        tools:text="Dilijan" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/branchNameTextView"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@color/textInactiveColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/addressTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:textColor="?attr/textColorGray"
                        android:textSize="@dimen/_12sdp"
                        tools:text="Address 33/45 a" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/phoneNumberTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/addressTextView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:autoLink="phone"
                        android:drawableStart="@mipmap/ic_phone"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/colorDarkGray"
                        android:textColor="?attr/textColorGray"
                        android:textColorLink="?attr/textColorGray"
                        android:textSize="@dimen/_12sdp"
                        tools:text="+37426823732" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/contact_number_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/phoneNumberTextView"
                        android:layout_centerHorizontal="true"
                        android:text="@string/contact_number"
                        android:textColor="?attr/textColorGray"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/workdayHourInfoRelativeLayout"
                        android:layout_width="@dimen/_160sdp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/contact_number_tv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp">


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/dateImageView"
                            android:layout_width="@dimen/_16sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/_6sdp"
                            android:src="@drawable/ic_date_range"
                            android:tint="@color/colorDarkGray"
                            tools:ignore="ContentDescription" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/workingDaysTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/dateImageView"
                            android:textColor="?attr/textColorGray"
                            android:textSize="@dimen/_10sdp"
                            tools:text="Mon-Fri" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/workingWeekendDaysTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/workingDaysTextView"
                            android:layout_toEndOf="@+id/dateImageView"
                            android:gravity="center"
                            android:textColor="?attr/textColorGray"
                            android:textSize="@dimen/_10sdp"
                            tools:text="Saturday" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/workHoursDaysTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textColor="?attr/textColorGray"
                            android:textSize="@dimen/_10sdp"
                            tools:ignore="RelativeOverlap"
                            tools:text="09:15-17:00" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/workHoursWeekendDaysTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/workHoursDaysTextView"
                            android:layout_alignParentEnd="true"
                            android:textColor="?attr/textColorGray"
                            android:textSize="@dimen/_10sdp"
                            tools:text="09:15-17:00" />


                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/workingDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/workdayHourInfoRelativeLayout"
                        android:layout_centerHorizontal="true"
                        android:text="@string/working_days"
                        android:textColor="?attr/textColorGray"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/bottom_decorator"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/workingDays"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@color/textInactiveColor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/viewOnMapTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bottom_decorator"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/view_on_map"
                        android:textAllCaps="true"
                        android:textColor="?attr/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_below="@id/info_container"
                    android:background="@color/colorDarkGray"
                    android:gravity="center">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/cashRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="?attr/colorWhite"
                            android:checked="true"
                            android:text="@string/cash"
                            android:textColor="?attr/textColorGray" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/nonCashRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_80sdp"
                            android:buttonTint="?attr/colorWhite"
                            android:text="@string/non_cache"
                            android:textColor="?attr/textColorGray" />

                    </RadioGroup>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="?attr/colorLightGray"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="2"
                    android:text="@string/currency"
                    android:textColor="?attr/textColorGray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/sell"
                    android:textColor="?attr/textColorGray" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/buy"
                    android:textColor="?attr/textColorGray" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/currencyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:background="?attr/colorLightGray"
                android:paddingStart="@dimen/_20sdp"
                android:text="@string/all_branches"
                android:textColor="?attr/colorPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/branchesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
